# internal/delivery/http/v1/userhandler/routing.go
@@ -4,6 +4,7 @@ import (
 	"context"
 
 	deliveryhttp "github.com/bhankey/pharmacy-automatization/internal/delivery/http"
+	"github.com/bhankey/pharmacy-automatization/internal/entities"
 	"github.com/go-chi/chi/v5"
 )
 
@@ -15,23 +16,27 @@ type UserHandler struct {
 }
 
 type UserSrv interface {
-	Login(ctx context.Context, email string, password string) (string, error)
+	Login(ctx context.Context, email, password string, identifyData entities.UserIdentifyData) (entities.Tokens, error)
+	RefreshToken(ctx context.Context, refreshToken string, identifyData entities.UserIdentifyData) (entities.Tokens, error)
+	// ResetPassword(ctx context.Context, email, code, newPassword string) error
 }
 
 func NewUserHandler(baseHandler *deliveryhttp.BaseHandler, userSrv UserSrv) *UserHandler {
 	router := chi.NewRouter()
 
-	handeler := &UserHandler{
+	handler := &UserHandler{
 		Router:      router,
 		userSrv:     userSrv,
 		BaseHandler: baseHandler,
 	}
 
-	handeler.initRoutes(router)
+	handler.initRoutes(router)
 
-	return handeler
+	return handler
 }
 
 func (h *UserHandler) initRoutes(router chi.Router) {
 	router.Post("/login", h.login)
+	router.Post("/refresh", h.refresh)
+	router.Get("/some", h.resetPassword)
 }
